# libseis

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  bindings.cpp  frad.m  libseis.c  libseis_test.c  libseis_test.cc  nmo.m  pyproject.toml
.github/workflows/: CI.yml  cmake.yml
libseis/: libseis.c  meson.build
libseis/io/src/: .gitignore  read.c
libseis/meson_ex/: libseis.c  libseis.h  libseis_test.c  meson.build
libseis/src/io/: a.out  readbin.c
libseis/src/util/: global.h
matlab/: gain.m  importcmp.m  irad.m  semb.m
src/: gather.rs  global.h  lib.rs  library.cpp  library.h  libseis.c  libseis.h  velocity.c  velocity.h
src/core/: CMakeLists.txt  README.md  bindings.cpp
src/core/add/: README.md  add.cpp  add.hpp  add_test.cpp
src/core/gather/: gather.cpp  gather.hpp
src/core/velocity/: velocity.cpp
src/libseis/: __init__.py  _add.pyi  _core.pyi  _gather.pyi  add.cpp  add.hpp  gather.cpp  math.py  velocity.cpp  velocity.hpp
test/: libseis_test.cc  libseis_test.cpp  velocity_test.cpp
tests/: libseis_test.cpp
tests/libseis/: test_add.py  test_gather.py  test_script.py
